[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "intersector"
version = "0.1.0"
description = "A CLI CAD application using OpenCascade"
authors = ["Yannis Arapakis"]
readme = "README.md"
packages = [{ include = "intersector", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
black = "^24.10.0"

[tool.poetry.scripts]
intersector = "intersector.cli:intersector"
